Update facilitator notes

--- a/facilitator-notes.tex
+++ b/facilitator-notes.tex
@@ -1,5 +1,6 @@
 \documentclass{article}
 \usepackage[top=1in,bottom=1in,right=1in,left=1in]{geometry}
+\usepackage{enumerate,multicol}
 
 \begin{document}
 
@@ -7,13 +8,40 @@
 Facilitator Notes
 \end{center}
 
-\section*{Introduction}
+\subsection*{Introduction}
 
-These notes are for a one semester, 3-hour Linear Algebra course.  Teams should have at minimum 5 people to ensure a sufficiently sized team factoring in absences.  Each team should be provided with a vertical, ideally non-permanent surface for their work, such as a whiteboard or chalkboard.  A vertical surface encourages collaboration and discussion, and discourages individual work on paper.  These notes have been field-tested at a regional public university in classes with 25-35 students, with each ``part'' designed to fill one 50-60 minute class period.  
+These notes are for a one semester, 3-hour sophomore-level Linear Algebra course.  Teams should have at minimum 5 people to ensure a sufficiently sized team factoring in absences.  Each team should be provided with a vertical, ideally non-permanent surface for their work, such as a whiteboard or chalkboard.  A vertical surface encourages collaboration and discussion, and discourages individual work on paper.  These notes have been field-tested at a large regional public university in classes with 25-35 students, with each ``part'' designed to fill one 50-60 minute class period.  
 
-\section*{Module 6-G}
+The course consists of 6 modules, listed below; here they are optimized for 29 75-minute class days with 60 minutes each day devoted to application activity, and the remaining 15 minutes for assessment.  
+
+\begin{enumerate}
+\item [1-E] Systems of Equations
+\item [2-V] Vector Spaces
+\item [3-S] Structure of Vector Spaces
+\item [4-A] Algebraic Properties of Linear Maps
+\item [5-M] Algebraic Structure of Matrices
+\item [6-G] Geometric Properties of Linear Maps
+\end{enumerate}
+
+\subsection*{Module 6-G: Geometric properties of linear maps}
 
 This module explores the geometric properties of linear transformations, focusing on determinants, eigenvalues, and eigenvectors.  The readiness assurance outcomes include some basic high school geometry and algebra, as well as some outcomes of earlier modules concerning the algebraic properties of linear transformations.  The first two days are devoted to determinants, while the next two explore eigenvalues and eigenvectors.  The last day focuses on on a popular application of eigenvectors, namely Google's PageRank algorithm.
+
+RAT answers (IF-AT card D012):
+\begin{multicols}{10}
+\begin{enumerate}[1)]
+\item A
+\item A
+\item D
+\item C
+\item A
+\item D
+\item B
+\item B
+\item A
+\item A
+\end{enumerate}
+\end{multicols}
 
 \subsubsection*{Part 1}
 The goal of this day is to get students to understand that a determinant is measuring how area/volume changes under a linear transformation.  Activities 25.1 through 25.6 require the students to make a specific construction of a graph and the resulting area transformation.  Students sometimes have a little trouble withe first of these, but then make short work of the remainder, requiring little class wide discussion.  Activity 25.10 invites the first incorrect responses after simultaneous reporting; the instructor is advised to emphasize the multiplicative nature of the stretching factor here.  Activity 25.11 can be made a little more concrete by distributing parallelograms and triangles cut out of card stock that invite the students to see the equality geometrically.  Activity 25.16 sometimes invites teams to settle on the incorrect answer choice of 7; once again, the instructor is advised to emphasize that the stretching factors (determinants) are multiplicative.
