proofread facilitator notes

--- a/facilitator-notes.tex
+++ b/facilitator-notes.tex
@@ -10,9 +10,9 @@ Facilitator Notes
 
 \subsection*{Introduction}
 
-These notes are for a one semester, 3-hour sophomore-level Linear Algebra course.  Teams should have at minimum 5 people to ensure a sufficiently sized team factoring in absences.  Each team should be provided with a vertical, ideally non-permanent surface for their work, such as a whiteboard or chalkboard.  A vertical surface encourages collaboration and discussion, and discourages individual work on paper.  These notes have been field-tested at a large regional public university in classes with 25-35 students, with each ``part'' designed to fill one 50-60 minute class period.  
+These notes are for a one semester, 3-hour sophomore-level Linear Algebra course.  Teams should have at minimum 5 people to ensure a sufficiently sized team factoring in absences.  Each team should be provided with a vertical, ideally non-permanent surface for their work, such as a whiteboard or chalkboard.  A vertical surface encourages collaboration and discussion, and discourages individual work on paper.  These notes have been field-tested at a large regional public university in classes with 25-35 students, with each ``part'' designed to fill one 50-60 minute class period.
 
-The course consists of 6 modules, listed below; here they are optimized for 29 75-minute class days with 60 minutes each day devoted to application activity, and the remaining 15 minutes for assessment.  
+The course consists of 6 modules, listed below; here they are optimized for 29 75-minute class days with 60 minutes each day devoted to application activity, and the remaining 15 minutes for assessment.
 
 \begin{enumerate}
 \item [1-E] Systems of Equations
@@ -44,7 +44,7 @@ RAT answers (IF-AT card D012):
 \end{multicols}
 
 \subsubsection*{Part 1}
-The goal of this day is to get students to understand that a determinant is measuring how area/volume changes under a linear transformation.  Activities 25.1 through 25.6 require the students to make a specific construction of a graph and the resulting area transformation.  Students sometimes have a little trouble withe first of these, but then make short work of the remainder, requiring little class wide discussion.  Activity 25.10 invites the first incorrect responses after simultaneous reporting; the instructor is advised to emphasize the multiplicative nature of the stretching factor here.  Activity 25.11 can be made a little more concrete by distributing parallelograms and triangles cut out of card stock that invite the students to see the equality geometrically.  Activity 25.16 sometimes invites teams to settle on the incorrect answer choice of 7; once again, the instructor is advised to emphasize that the stretching factors (determinants) are multiplicative.
+The goal of this day is to get students to understand that a determinant is measuring how area/volume changes under a linear transformation.  Activities 25.1 through 25.6 require the students to make a specific construction of a graph and the resulting area transformation.  Students sometimes have a little trouble with the first of these, but then make short work of the remainder, requiring little class wide discussion.  Activity 25.10 invites the first incorrect responses after simultaneous reporting; the instructor is advised to emphasize the multiplicative nature of the stretching factor here.  Activity 25.11 can be made a little more concrete by distributing parallelograms and triangles cut out of card stock that invite the students to see the equality geometrically.  Activity 25.16 sometimes invites teams to settle on the incorrect answer choice of 7; once again, the instructor is advised to emphasize that the stretching factors (determinants) are multiplicative.
 
 \subsubsection*{Part 2}
 The goal of this day is to help students understand how to actually compute a determinant.  Activity 26.4 gives one straightforward but tedious method to motivate the search for better techniques.  Activity 26.6 begins an inquiry towards Laplace expansion.  Activities 26.8 through 26.11 are carefully scaffolded to guide students toward understanding how linearity of the determinant leads to Laplace expansion.  In practice, students will find a mixture of row operations and Laplace expansion the most efficient way to actually perform the computations.
