Update standard list, addresses #62

--- a/includes/standards-base.tex
+++ b/includes/standards-base.tex
@@ -16,13 +16,13 @@
 \begin{enumerate}[{$\Box\ \Box$ \bf {E}1.}]
 \item {\bf Systems as matrices}. I can translate back and forth between a system of linear equations and the corresponding augmented matrix.
 \item {\bf Row reduction}.  I can put a matrix in reduced row echelon form.
-\item {\bf Systems of linear equations}. I can solve a system of linear equations.
-\item {\bf Homogeneous systems}. I can find a basis for the solution set of a homogeneous system of equations.
+\item {\bf Systems of linear equations}. I can write the solution set (in proper notation) for a system of linear equations.
 \end{enumerate}
 
 \item[What is a vector space?] \hfill
 \begin{enumerate}[{$\Box\ \Box$ \bf {V}1.}]
-\item {\bf Vector space}. I can determine if a set with given operations forms a vector space.
+\item {\bf Vector space I}. 
+\item {\bf Vector space II}. 
 \item {\bf Linear combinations}. I can determine if a vector can be written as a linear combination of a given set of vectors.
 \item {\bf Spanning sets}. I can determine if a set of vectors spans a vector space.
 \item {\bf Subspaces}. I can determine if a subset of a vector space is a subspace or not.
@@ -35,13 +35,15 @@
 \item {\bf Linear independence}. I can determine if a set of vectors is linearly dependent or independent.
 \item {\bf Basis verification}. I can determine if a set of vectors is a basis of a vector space.
 \item {\bf Basis construction}.  I can compute a basis for the subspace spanned by a given set of vectors.
+\item {\bf Basis of solution space}. I can find a basis for the solution set of a homogeneous system of equations.
 \item {\bf Dimension}.  I can compute the dimension of a vector space.
+\item {\bf Abstract vector spaces}.  I can answer questions (such as V3,S1,S2, and S3) about vector spaces of polynomials or matrices.
 \end{enumerate}
 
 \item[How can we understand linear maps algebraically?] \hfill
 \begin{enumerate}[{$\Box\ \Box$ \bf {A}1.}]
-\item {\bf Linear maps as matrices}.  I can write the standard matrix corresponding to a linear transformation between Euclidean spaces.
-\item {\bf Linear map verification}. I can determine if a map between vector spaces is linear or not.
+\item {\bf Linear maps as matrices}.  I can write the standard matrix corresponding to a linear transformation between Euclidean spaces, and given the matrix compute the image of a given vector.
+\item {\bf Linear map verification}. I can determine if a map between vector spaces of polynomials is linear or not.
 \item {\bf Injectivity and surjectivity}.  I can determine if a given linear map is injective and/or surjective.
 \item {\bf Kernel and Image}. I can compute the kernel and image of a linear map, including finding bases.
 \end{enumerate}
@@ -57,10 +59,10 @@
 
 \item[How can we understand linear maps geometrically?] \hfill
 \begin{enumerate}[{$\Box\ \Box$ \bf {G}1.}]
+\item {\bf Row operations}.  I can represent a row operation as matrix multiplication, and determine how it changes the determinant.
 \item {\bf Determinants}. I can compute the determinant of a square matrix.
-\item {\bf Eigenvalues}. I can find the eigenvalues of a square matrix, along with their algebraic multiplicities.
-\item {\bf Eigenvectors}. I can find the eigenspace of a square matrix associated to a given eigenvalue.
-\item {\bf Geometric multiplicity}. I can compute the geometric multiplicity of an eigenvalue of a square matrix.
+\item {\bf Eigenvalues}. I can find the eigenvalues of a $2\times 2$ matrix.
+\item {\bf Eigenvectors}. I can find a basis of the eigenspace of a square matrix associated to a given eigenvalue.
 \end{enumerate}
 
 \end{description}
