Fix formatting on standards list

--- a/includes/standards-base.tex
+++ b/includes/standards-base.tex
@@ -1,18 +1,6 @@
-
-\usepackage[left=1in,right=1in,top=1in,bottom=1in]{geometry}
-\usepackage{enumerate,amssymb}
-
-\begin{document}
-\pagestyle{empty}
-\noindent Math 237 \hfill \sem \hfill \prof
-\vspace{0.3in}
-\hrule
-\begin{center}{\large \bf Linear Algebra Standards}\end{center}
-\hrule
-
-\begin{multicols}{2}
 \noindent\textbf{How can we solve systems of linear equations?}
 \begin{enumerate}[{$\Box\ \Box$ \bf {E}1.}]
+\setlength{\itemsep}{-0.02in}
 \item {\bf Systems as matrices}. I can translate back and forth between a system of linear equations and the corresponding augmented matrix.
 \item {\bf Row reduction}.  I can put a matrix in reduced row echelon form.
 \item {\bf Systems of linear equations}. I can compute the solution set for a system of linear equations.
@@ -20,8 +8,9 @@
 
 \noindent\textbf{What is a vector space?}
 \begin{enumerate}[{$\Box\ \Box$ \bf {V}1.}]
+\setlength{\itemsep}{-0.02in}
 \item {\bf Vector property verification}. I can show why an example satisfies a given vector space property, but does not satisfy another given property.
-\item {\bf Vector space identification}. I can list all eight properties of a vector space, infer which of these properties a given example satisfies, and thus determine if the example is a vector space.
+\item {\bf Vector space identification}. I can list the eight defining properties of a vector space, infer which of these properties a given example satisfies, and thus determine if the example is a vector space.
 \item {\bf Linear combinations}. I can determine if a Euclidean vector can be written as a linear combination of a given set of Euclidean vectors.
 \item {\bf Spanning sets}. I can determine if a set of Euclidean vectors spans \(\IR^n\).
 \item {\bf Subspaces}. I can determine if a subset of \(\IR^n\) is a subspace or not.
@@ -30,6 +19,7 @@
 
 \noindent\textbf{What structure do vector spaces have?}
 \begin{enumerate}[{$\Box\ \Box$ \bf {S}1.}]
+\setlength{\itemsep}{-0.02in}
 
 \item {\bf Linear independence}. I can determine if a set of Euclidean vectors is linearly dependent or independent.
 \item {\bf Basis verification}. I can determine if a set of Euclidean vectors is a basis of \(\IR^n\).
@@ -41,6 +31,7 @@
 
 \noindent\textbf{How can we understand linear maps algebraically?}
 \begin{enumerate}[{$\Box\ \Box$ \bf {A}1.}]
+\setlength{\itemsep}{-0.02in}
 \item {\bf Linear maps and matrices}. I can translate back and forth between a
 linear transformation of Euclidean spaces and its standard matrix, and perform related computations.
 \item {\bf Linear map verification}. I can determine if a map between vector spaces of polynomials is linear or not.
@@ -51,6 +42,7 @@ linear transformation of Euclidean spaces and its standard matrix, and perform r
 
 \noindent\textbf{What algebraic structure do matrices have?}
 \begin{enumerate}[{$\Box\ \Box$ \bf {M}1.}]
+\setlength{\itemsep}{-0.02in}
 \item {\bf Matrix Multiplication}. I can multiply matrices.
 \item {\bf Invertible Matrices}. I can determine if a square matrix is invertible or not.
 \item {\bf Matrix inverses}.  I can compute the inverse matrix of an invertible matrix.
@@ -59,13 +51,11 @@ linear transformation of Euclidean spaces and its standard matrix, and perform r
 
 \noindent\textbf{How can we understand linear maps geometrically?}
 \begin{enumerate}[{$\Box\ \Box$ \bf {G}1.}]
+\setlength{\itemsep}{-0.02in}
 \item {\bf Row operations}.  I can represent a row operation as matrix multiplication, and compute how the operation affects the determinant.
 \item {\bf Determinants}. I can compute the determinant of a square matrix.
 \item {\bf Eigenvalues}. I can find the eigenvalues of a $2\times 2$ matrix.
 \item {\bf Eigenvectors}. I can find a basis for the eigenspace of a square matrix associated with a given eigenvalue.
 \end{enumerate}
 
-\end{multicols}
 
-
-\end{document}
