--- a/standards-clontz.tex
+++ b/standards-clontz.tex
@@ -4,7 +4,7 @@
   %\booltrue{TR}   %Drew
   \boolfalse{TR}  %Steven
 
-\usepackage[left=1in,right=1in,top=1in,bottom=1in]{geometry}
+\usepackage[left=0.75in,right=0.75in,top=1in,bottom=1in]{geometry}
 \usepackage{enumerate,amssymb}
 
 \begin{document}
@@ -14,9 +14,8 @@
 \hrule
 \begin{center}{\large \bf Linear Algebra Standards}\end{center}
 \hrule
+\vspace{0.1in}
 
-\begin{multicols}{2}
 \input{includes/standards-base}
-\end{multicols}
 
 \end{document}
