--- a/standards-lewis.tex
+++ b/standards-lewis.tex
@@ -4,7 +4,7 @@
   \booltrue{TR}   %Drew
   %\boolfalse{TR}  %Steven
 
-\usepackage[left=0.5in,right=0.75in,top=1in,bottom=1in]{geometry}
+\usepackage[left=0.75in,right=0.75in,top=1in,bottom=1in]{geometry}
 \usepackage{enumerate,amssymb}
 
 \begin{document}
@@ -14,7 +14,7 @@
 \hrule
 \begin{center}{\large \bf Linear Algebra Standards}\end{center}
 \hrule
-
+\vspace{0.1in}
 
 \input{includes/standards-base}
 
