work on course notes to read in standards file

--- a/modules/1-E/index.tex
+++ b/modules/1-E/index.tex
@@ -3,21 +3,12 @@
 
 \begin{module}{E}{Solving Systems of Linear Equations}
 
-\begin{moduleStandards}
-  \item \textbf{E1: Systems as matrices.}
-        Translate back and forth between a system of linear equations and
-        the corresponding augmented matrix.
-  \item \textbf{E2: Row reduction.}
-        Put a matrix in reduced row echelon form
-  \item \textbf{E3: Solving Linear Systems.}
-        Solve a system of linear equations.
-  \item \textbf{E4: Homogeneous Systems.}
-        Find a basis for the solution set of a homogeneous linear system.
-\end{moduleStandards}
+\input{../modules/1-E/standards.tex}
 
-\input{modules/1-E/readiness.tex}
-\input{modules/1-E/day1.tex}
-\input{modules/1-E/day2.tex}
-\input{modules/1-E/day3.tex}
+% \input{modules/1-E/readiness.tex}
+
+\input{../modules/1-E/part1.tex}
+\input{../modules/1-E/part2.tex}
+\input{../modules/1-E/part3.tex}
 
 \end{module}
