--- a/modules/1-E/standards.tex
+++ b/modules/1-E/standards.tex
@@ -1,5 +1,5 @@
 \moduleQuestion{How can we solve systems of linear equations?}
-\begin{standardsList}
+\begin{moduleStandards}
   \standard{Systems as matrices}{SysMat}{
     translate back and forth between a system of linear equations
     and the corresponding augmented matrix.
@@ -10,4 +10,4 @@
   \standard{Systems of linear equations}{SlvSys}{
     compute the solution set for a system of linear equations.
   }
-\end{standardsList}
+\end{moduleStandards}
