--- a/modules/2-V/index.tex
+++ b/modules/2-V/index.tex
@@ -3,22 +3,13 @@
 
 \begin{module}{V}{Vector Spaces}
 
-\begin{moduleStandards}
-  \item \textbf{V1: Vector Spaces.}
-        Determine if a set with given operations forms a vector space.
-  \item \textbf{V2: Linear Combinations.}
-        Determine if a vector can be written as a linear combination of
-        a given set of vectors.
-  \item \textbf{V3: Spanning Sets.}
-        Determine if a set of vectors spans a vector space.
-  \item \textbf{V4: Subspaces.}
-        Determine if a subset of a vector space is a subset or not.
-\end{moduleStandards}
+\input{../modules/2-V/standards.tex}
 
-\input{modules/2-V/readiness.tex}
-\input{modules/2-V/day1.tex}
-\input{modules/2-V/day2.tex}
-\input{modules/2-V/day3.tex}
-\input{modules/2-V/day4.tex}
+% \input{modules/2-V/readiness.tex}
+
+\input{../modules/2-V/part1.tex}
+\input{../modules/2-V/part2.tex}
+\input{../modules/2-V/part3.tex}
+\input{../modules/2-V/part4.tex}
 
 \end{module}
