--- a/modules/2-V/standards.tex
+++ b/modules/2-V/standards.tex
@@ -1,5 +1,5 @@
 \moduleQuestion{What is a vector space?}
-\begin{standardsList}
+\begin{moduleStandards}
   \standard{Vector property verification}{VecPrp}{
     show why an example satisfies a given vector space property, but does not satisfy another given property.
   }
@@ -15,4 +15,4 @@
   \standard{Subspaces}{Subsp}{
     determine if a subset of \(\IR^n\) is a subspace or not.
   }
-\end{standardsList}
+\end{moduleStandards}
