--- a/modules/3-S/standards.tex
+++ b/modules/3-S/standards.tex
@@ -1,5 +1,5 @@
 \moduleQuestion{What structure do vector spaces have?}
-\begin{standardsList}
+\begin{moduleStandards}
   \standard{Linear independence}{LinInd}{
     determine if a set of Euclidean vectors is linearly dependent or
     independent.
@@ -21,4 +21,4 @@
   \standard{Basis of solution space}{BasSol}{
     find a basis for the solution set of a homogeneous system of equations.
   }
-\end{standardsList}
+\end{moduleStandards}
