--- a/modules/4-A/standards.tex
+++ b/modules/4-A/standards.tex
@@ -1,5 +1,5 @@
 \moduleQuestion{How can we understand linear maps algebraically?}
-\begin{standardsList}
+\begin{moduleStandards}
   \standard{Linear maps and matrices}{LinMat}{
     translate back and forth between a
     linear transformation of Euclidean spaces and its standard matrix, and
@@ -14,4 +14,4 @@
   \standard{Kernel and Image}{KerImg}{
     compute a basis for the kernel and a basis for the image of a linear map.
   }
-\end{standardsList}
+\end{moduleStandards}
