--- a/modules/6-G/standards.tex
+++ b/modules/6-G/standards.tex
@@ -1,5 +1,5 @@
 \moduleQuestion{How can we understand linear maps geometrically?}
-\begin{standardsList}
+\begin{moduleStandards}
   \standard{Row operations}{RowOp}{
     represent a row operation as matrix multiplication, and compute how the operation affects the determinant.
   }
@@ -12,4 +12,4 @@
   \standard{Eigenvectors}{EigVec}{
     find a basis for the eigenspace of a square matrix associated with a given eigenvalue.
   }
-\end{standardsList}
+\end{moduleStandards}
