--- a/tex/standards.tex
+++ b/tex/standards.tex
@@ -9,7 +9,7 @@
 \newcommand{\moduleQuestion}[1]{
   \noindent\textbf{Module \module:} #1
 }
-\newenvironment{standardsList}{
+\newenvironment{moduleStandards}{
   \begin{enumerate}[\bf\(\Box\) \(\Box\) \module{}1.]
   \setlength{\itemsep}{-0.02in}
 }{
