--- a/modules/5-M/standards.tex
+++ b/modules/5-M/standards.tex
@@ -1,5 +1,5 @@
 \moduleQuestion{What algebraic structure do matrices have?}
-\begin{standardsList}
+\begin{moduleStandards}
   \standard{Matrix Multiplication}{MatMlt}{
     multiply matrices.
   }
@@ -9,7 +9,7 @@
   \standard{Matrix inverses}{InvCmp}{
     compute the inverse matrix of an invertible matrix.
   }
-\end{standardsList}
+\end{moduleStandards}
 %
 %
 % \moduleQuestion{How can we understand linear maps geometrically?}
