--- a/tex/tbil-la.sty
+++ b/tex/tbil-la.sty
@@ -26,7 +26,7 @@
 
 %%%Custom Counters%%%
 \newcommand{\moduleLetter}{X}
-\newcounter{ClassDayCounter}
+\newcommand{\modulePart}{Y}
 \newcounter{ActivityCounter}
 \newcounter{SubactivityCounter}
 
