refactor course notes

--- a/modules/0-I/index.tex
+++ b/modules/0-I/index.tex
@@ -2,6 +2,12 @@
 % ^ leave for LaTeXTools build functionality
 
 \begin{module}{I}{Introduction}
+
+\begin{remark}
+  This brief module gives an overview for the course.
+\end{remark}
+
+
 \begin{applicationActivities}{1}{1}
 
 \begin{remark} \textbf{What is Linear Algebra?}
