--- a/modules/4-A/index.tex
+++ b/modules/4-A/index.tex
@@ -3,21 +3,12 @@
 
 \begin{module}{A}{Algebraic properties of linear maps}
 
-\begin{moduleStandards}
-  \item \textbf{A1. Linear maps as matrices}
-         I can write the standard matrix corresponding to a linear transformation between Euclidean spaces.
-  \item \textbf{A2. Linear map verification}
-        I can determine if a map between vector spaces is linear or not.
-  \item \textbf{A3. Injectivity and Surjectivity}
-        I can determine if a given linear map is injective and/or surjective
-  \item \textbf{A4. Kernel and Image}
-        I can compute the kernel and image of a linear map, including finding bases.
-\end{moduleStandards}
+\input{../modules/4-A/standards.tex}
 
+% \input{../modules/4-A/readiness.tex}
 
-\input{modules/4-A/readiness.tex}
-\input{modules/4-A/day1.tex}
-\input{modules/4-A/day2.tex}
-\input{modules/4-A/day3.tex}
+\input{../modules/4-A/part1.tex}
+\input{../modules/4-A/part2.tex}
+\input{../modules/4-A/part3.tex}
 
 \end{module}
