--- a/tex/course-notes.tex
+++ b/tex/course-notes.tex
@@ -8,8 +8,8 @@
 \input{../modules/1-E/index.tex}
 \input{../modules/2-V/index.tex}
 \input{../modules/3-S/index.tex}
-% \input{../modules/4-A/index.tex}
-% \input{../modules/5-M/index.tex}
-% \input{../modules/6-G/index.tex}
+\input{../modules/4-A/index.tex}
+\input{../modules/5-M/index.tex}
+\input{../modules/6-G/index.tex}
 
 \end{document}
