--- a/tex/modules/1-E/index.tex
+++ b/tex/modules/1-E/index.tex
@@ -1,14 +1,11 @@
-%!TEX root =../../course-notes.tex
-% ^ leave for LaTeXTools build functionality
-
 \begin{module}{E}{Solving Systems of Linear Equations}
 
-\input{../modules/1-E/standards.tex}
+\input{modules/1-E/standards.tex}
+\input{modules/1-E/readiness/outcomes.tex}
+\input{modules/1-E/readiness/resources.tex}
 
-% \input{modules/1-E/readiness.tex}
-
-\input{../modules/1-E/part1.tex}
-\input{../modules/1-E/part2.tex}
-\input{../modules/1-E/part3.tex}
+\input{modules/1-E/sections/1.tex}
+\input{modules/1-E/sections/2.tex}
+\input{modules/1-E/sections/3.tex}
 
 \end{module}
