--- a/tex/modules/2-V/index.tex
+++ b/tex/modules/2-V/index.tex
@@ -1,15 +1,12 @@
-%!TEX root =../../course-notes.tex
-% ^ leave for LaTeXTools build functionality
-
 \begin{module}{V}{Vector Spaces}
 
-\input{../modules/2-V/standards.tex}
+\input{modules/2-V/standards.tex}
+\input{modules/2-V/readiness/outcomes.tex}
+\input{modules/2-V/readiness/resources.tex}
 
-% \input{modules/2-V/readiness.tex}
-
-\input{../modules/2-V/part1.tex}
-\input{../modules/2-V/part2.tex}
-\input{../modules/2-V/part3.tex}
-\input{../modules/2-V/part4.tex}
+\input{modules/2-V/sections/1.tex}
+\input{modules/2-V/sections/2.tex}
+\input{modules/2-V/sections/3.tex}
+\input{modules/2-V/sections/4.tex}
 
 \end{module}
