--- a/tex/modules/5-M/index.tex
+++ b/tex/modules/5-M/index.tex
@@ -1,14 +1,11 @@
-%!TEX root =../../course-notes.tex
-% ^ leave for LaTeXTools build functionality
-
 \begin{module}{M}{Understanding Matrices Algebraically}
 
-\input{../modules/5-M/standards.tex}
+\input{modules/5-M/standards.tex}
+\input{modules/5-M/readiness/outcomes.tex}
+\input{modules/5-M/readiness/resources.tex}
 
-% \input{../modules/5-M/readiness.tex}
-
-\input{../modules/5-M/part1.tex}
-\input{../modules/5-M/part2.tex}
-\input{../modules/5-M/part3.tex}
+\input{modules/5-M/sections/1.tex}
+\input{modules/5-M/sections/2.tex}
+\input{modules/5-M/sections/3.tex}
 
 \end{module}
