--- a/tex/modules/6-G/index.tex
+++ b/tex/modules/6-G/index.tex
@@ -1,15 +1,12 @@
-%!TEX root =../../course-notes.tex
-% ^ leave for LaTeXTools build functionality
-
 \begin{module}{G}{Geometry of Linear Maps}
 
-\input{../modules/6-G/standards.tex}
+\input{modules/6-G/standards.tex}
+\input{modules/6-G/readiness/outcomes.tex}
+\input{modules/6-G/readiness/resources.tex}
 
-% \input{../modules/6-G/readiness.tex}
-
-\input{../modules/6-G/part1.tex}
-\input{../modules/6-G/part2.tex}
-\input{../modules/6-G/part3.tex}
-\input{../modules/6-G/part4.tex}
+\input{modules/6-G/sections/1.tex}
+\input{modules/6-G/sections/2.tex}
+\input{modules/6-G/sections/3.tex}
+\input{modules/6-G/sections/4.tex}
 
 \end{module}
