--- a/tex/standards.tex
+++ b/tex/standards.tex
@@ -29,16 +29,16 @@
 \vspace{0.1in}
 
 \setModule{E}
-\input{../modules/1-E/standards}
+\input{modules/1-E/standards}
 \setModule{V}
-\input{../modules/2-V/standards}
+\input{modules/2-V/standards}
 \setModule{S}
-\input{../modules/3-S/standards}
+\input{modules/3-S/standards}
 \setModule{A}
-\input{../modules/4-A/standards}
+\input{modules/4-A/standards}
 \setModule{M}
-\input{../modules/5-M/standards}
+\input{modules/5-M/standards}
 \setModule{G}
-\input{../modules/6-G/standards}
+\input{modules/6-G/standards}
 
 \end{document}
