--- a/tex/course-notes.sty
+++ b/tex/course-notes.sty
@@ -34,7 +34,6 @@
 
 
 \NewEnviron{readinessAssuranceOutcomes}{
-  \newpage
   \subsection*{Readiness Assurance Outcomes}
 
   Before beginning this module, each student should be able to...
@@ -59,6 +58,7 @@
   \item \textbf{#1.}
         ...#3
 }
+\newcommand{\listOfStandards}[1]{\textbf{#1}}
 
 \NewEnviron{readinessAssuranceResources}{
   \subsection*{Readiness Assurance Resources}
