--- a/tex/modules/3-S/index.tex
+++ b/tex/modules/3-S/index.tex
@@ -1,14 +1,11 @@
-%!TEX root =../../course-notes.tex
-% ^ leave for LaTeXTools build functionality
-
 \begin{module}{S}{Structure of vector spaces}
 
-\input{../modules/3-S/standards.tex}
+\input{modules/3-S/standards.tex}
+\input{modules/3-S/readiness/outcomes.tex}
+\input{modules/3-S/readiness/resources.tex}
 
-% \input{../modules/3-S/readiness.tex}
-
-\input{../modules/3-S/part1.tex}
-\input{../modules/3-S/part2.tex}
-\input{../modules/3-S/part3.tex}
+\input{modules/3-S/sections/1.tex}
+\input{modules/3-S/sections/2.tex}
+\input{modules/3-S/sections/3.tex}
 
 \end{module}
