--- a/tex/modules/4-A/index.tex
+++ b/tex/modules/4-A/index.tex
@@ -1,14 +1,11 @@
-%!TEX root =../../course-notes.tex
-% ^ leave for LaTeXTools build functionality
-
 \begin{module}{A}{Algebraic properties of linear maps}
 
-\input{../modules/4-A/standards.tex}
+\input{modules/4-A/standards.tex}
+\input{modules/4-A/readiness/outcomes.tex}
+\input{modules/4-A/readiness/resources.tex}
 
-% \input{../modules/4-A/readiness.tex}
-
-\input{../modules/4-A/part1.tex}
-\input{../modules/4-A/part2.tex}
-\input{../modules/4-A/part3.tex}
+\input{modules/4-A/sections/1.tex}
+\input{modules/4-A/sections/2.tex}
+\input{modules/4-A/sections/3.tex}
 
 \end{module}
