shorten resource links

--- a/tex/modules/1-E/readiness/resources.tex
+++ b/tex/modules/1-E/readiness/resources.tex
@@ -1,4 +1,8 @@
 \begin{readinessAssuranceResources}
-\item \url{https://www.khanacademy.org/math/cc-eighth-grade-math/cc-8th-systems-topic/cc-8th-systems-graphically/a/systems-of-equations-with-graphing}
-\item \url{https://www.khanacademy.org/math/algebra/systems-of-linear-equations/solving-systems-of-equations-with-substitution/v/practice-using-substitution-for-systems}
+\item Systems of linear equations (Khan Academy):
+      \url{http://bit.ly/2l21etm}
+      % \url{https://www.khanacademy.org/math/cc-eighth-grade-math/cc-8th-systems-topic/cc-8th-systems-graphically/a/systems-of-equations-with-graphing}
+\item Solving linear systems with substitution (Khan Academy):
+      \url{http://bit.ly/1SlMpix}
+      % \url{https://www.khanacademy.org/math/algebra/systems-of-linear-equations/solving-systems-of-equations-with-substitution/v/practice-using-substitution-for-systems}
 \end{readinessAssuranceResources}
