--- a/tex/modules/6-G/readiness/resources.tex
+++ b/tex/modules/6-G/readiness/resources.tex
@@ -1,8 +1,11 @@
 \begin{readinessAssuranceResources}
-\item Finding the area of a parallelogram: \url{https://www.khanacademy.org/math/basic-geo/basic-geo-area-and-perimeter/parallelogram-area/a/area-of-parallelogram}
-\item Factoring quadratics: \url{https://www.khanacademy.org/math/algebra2/polynomial-functions/factoring-polynomials-quadratic-forms-alg2/v/factoring-polynomials-1}
-\item Finding complex roots of quadratics: \url{https://www.khanacademy.org/math/algebra2/polynomial-functions/quadratic-equations-with-complex-numbers/v/complex-roots-from-the-quadratic-formula}
-\item Finding all roots of polynomials: \url{https://www.khanacademy.org/math/algebra2/polynomial-functions/finding-zeros-of-polynomials/v/finding-roots-or-zeros-of-polynomial-1}
-\item The Rational Root Theorem:
-\url{https://artofproblemsolving.com/wiki/index.php?title=Rational_Root_Theorem}
+\item Finding the area of a parallelogram (Khan Academy):
+      \url{http://bit.ly/2BO5iWx}
+% \url{https://www.khanacademy.org/math/basic-geo/basic-geo-area-and-perimeter/parallelogram-area/a/area-of-parallelogram}
+\item Factoring quadratics (Khan Academy):
+      \url{http://bit.ly/1XjfbV2}
+% \url{https://www.khanacademy.org/math/algebra2/polynomial-functions/factoring-polynomials-quadratic-forms-alg2/v/factoring-polynomials-1}
+\item Finding complex roots of quadratics (Khan Academy):
+      \url{http://bit.ly/1HH3yAA}
+% \url{https://www.khanacademy.org/math/algebra2/polynomial-functions/quadratic-equations-with-complex-numbers/v/complex-roots-from-the-quadratic-formula}
 \end{readinessAssuranceResources}
