--- a/tex/tbil-la.sty
+++ b/tex/tbil-la.sty
@@ -26,7 +26,7 @@
 
 %%%Custom Counters%%%
 \newcommand{\moduleLetter}{X}
-\newcommand{\modulePart}{0}
+\newcounter{SectionCounter}
 \newcounter{ActivityCounter}
 \newcounter{SubactivityCounter}
 
